--- a/config/application.yml
+++ b/config/application.yml
@@ -10,7 +10,6 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-S3_KEY: <key here>
-S3_SECRET: <secret key here>
-S3_BUCKET: <bucket name here>
-S3_REGION: <region name here>
+AWS_ACCESS_KEY: "hello access key"
+AWS_SECRET_KEY: "hello secret key"
+AWS_BUCKET: "hello bucket"
